Open access for Palantir Java Formatter