@@ -110,6 +110,16 @@ public abstract class LaunchSpineCompiler : JavaExec() {
         WorkingDirectory(dir.toPath())
     }
 
+    init {
+        jvmArgs(
+            // Open access for Palantir Java Formatter.
+            "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+            "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+        )
+    }
+
     /**
      * Configures the CLI command for this task.
      *
